# vda5050_core

./: .clang-format  .env  .gitignore  Dockerfile  README.md  STITCH_GUARD_FIXES.md  compose.yml  mosquitto.yml  run_all_tests.py  scorpio-compose.yml  test_combine_order_mismatch.py  test_order_id_mismatch_bug.py  test_stitch_guard_base_seq.py  test_stitch_guard_orderupdateid.py  test_stitch_guard_unit.py  test_vda5050_basic.py  vda5050-arch.drawio  vda5050-fiware.md
vda5050_core/: CMakeLists.txt  package.xml  vcpkg.json
vda5050_core/cmake/: vda5050_add_gmock.cmake  vda5050_add_gtest.cmake  vda5050_coreConfig.cmake.in
vda5050_core/examples/: adapter_example.cpp  mqtt_stay_connected.cpp  single_order_publish.cpp
vda5050_core/include/vda5050_core/adapter/: action_request.hpp  adapter.hpp  execution.hpp  execution_progress.hpp  navigation_manager.hpp  navigation_request.hpp  reporter.hpp  runtime.hpp  state_manager.hpp
vda5050_core/include/vda5050_core/client/: order_types.hpp
vda5050_core/include/vda5050_core/compat/: time_utils.hpp
vda5050_core/include/vda5050_core/errors/: error_codes.hpp  error_factory.hpp  validation_result.hpp
vda5050_core/include/vda5050_core/execution/: base.hpp  engine.hpp  order_types.hpp  protocol_adapter.hpp
vda5050_core/include/vda5050_core/json_utils/: layout_serialization.hpp  traits.hpp
vda5050_core/include/vda5050_core/layout/: edge.hpp  graph.hpp  layout.hpp  layout_action.hpp  layout_loader.hpp  lif.hpp  load_restriction.hpp  node.hpp  station.hpp  trajectory.hpp  validate_layout.hpp  vehicle_type_edge_property.hpp  (+1 more)
vda5050_core/python/: CMakeLists.txt  bindings.cpp
vda5050_core/python/include/: rmf_migration.hpp
vda5050_core/python/rmf_migration/: action.cpp  command_execution.cpp  destination.cpp  fleet.cpp  robot.cpp  robot_update_handle.cpp
vda5050_core/python/src/: rmf_migration.cpp
vda5050_core/src/adapter/: adapter.cpp  adapter_impl.hpp  adapter_internal.hpp  navigation_manager.cpp  reporter.cpp  runtime.cpp  state_manager.cpp
vda5050_core/src/execution/: engine.cpp  protocol_adapter.cpp
vda5050_core/src/layout/: graph.cpp  layout.cpp  layout_loader.cpp  validate_layout.cpp
vda5050_core/src/logger/: logger.cpp
vda5050_core/src/master/: agv.cpp  event_detector.cpp  heartbeat.cpp  master.cpp
vda5050_core/src/order_utils/: order_graph_validator.cpp
vda5050_core/src/transport/: paho_mqtt_client.cpp
vda5050_core/test/adapter/: test_adapter_smoke.cpp
vda5050_core/test/client/: test_agv_context.cpp  test_order_acceptance.cpp  test_order_actions.cpp  test_order_context.cpp  test_order_execution_resource.cpp  test_order_traversal.cpp  test_order_types.cpp  test_order_validator.cpp  test_state_reporting.cpp
vda5050_core/test/execution/: test_order_context.cpp  test_order_types.cpp  test_protocol_adapter.cpp  test_protocol_adapter_shared_client.cpp  test_protocol_adapter_unique_client.cpp
vda5050_core/test/integration/: test_PahoMqttClient.cpp  test_paho_mqtt_client.cpp
vda5050_core/test/layout/: test_unit_graph.cpp  test_unit_loader.cpp
vda5050_core/test/master/: test_fixture_agv.hpp  test_integration_heartbeat.cpp  test_integration_master_assign_instant_actions.cpp  test_integration_master_assign_order.cpp  test_integration_master_broker_status.cpp  test_integration_master_logic.cpp  test_integration_master_mode_handling.cpp  test_integration_master_mqtt.cpp  test_integration_master_state_timeout.cpp  test_integration_master_teardown.cpp  test_unit_action_conflict_validator.cpp  test_unit_agv.cpp  test_unit_agv_connection_state.cpp  test_unit_agv_pose_view.cpp  test_unit_capability_validator.cpp  test_unit_content_validator.cpp  test_unit_event_detection_strategy.cpp  test_unit_event_detector.cpp  test_unit_factsheet_alignment.cpp  test_unit_instant_action_mode_validator.cpp  test_unit_layout_graph.cpp  test_unit_layout_loader.cpp  test_unit_map_loader.cpp  test_unit_order_lifecycle_manager.cpp  test_unit_order_publisher.cpp  test_unit_order_stitcher.cpp  test_unit_pre_send_validator.cpp  test_unit_protocol_limits_validator.cpp  test_unit_schema_validator.cpp  test_unit_state_event_detector.cpp  test_unit_traversability_validator.cpp
vda5050_core/test/transport/: test_integration_paho_mqtt_client.cpp
vda5050_core/test/unit/: test_MqttClientInterface.cpp  test_OrderGraphValidator.cpp  test_OrderManager.cpp
vda5050_json_utils/: CMakeLists.txt  package.xml
vda5050_json_utils/include/vda5050_json_utils/: schemas.hpp  serialization.hpp  traits.hpp  validators.hpp
vda5050_json_utils/test/: test_json_utils.cpp  test_json_utils_ros2.cpp  test_json_validators.cpp
vda5050_json_utils/test/generator/: generator.hpp  generator_ros2.hpp  jsonGenerator.hpp
vda5050_master/: CMakeLists.txt  package.xml
vda5050_master/include/vda5050_master/: standard_names.hpp  vda5050_interfaces.hpp
vda5050_master/src/: vda5050_master.cpp
vda5050_master/src/agv/: agv.cpp
vda5050_master/src/vda5050_master/: master.cpp
vda5050_master/test/agv/: agv_connection_state_test.cpp  agv_lifecycle_test.cpp  agv_operational_state_test.cpp  agv_test.cpp  agv_test_fixture.hpp  mock_mqtt_client.hpp
vda5050_master/test/communication/: test_helpers.hpp
vda5050_master/test/integration/: heartbeat.cpp
vda5050_master/test/master/: master_logic_test.cpp  master_mqtt_test.cpp
vda5050_types/: CMakeLists.txt
vda5050_types/include/vda5050_types/: action.hpp  action_parameter.hpp  action_parameter_factsheet.hpp  action_parameter_value.hpp  action_parameter_value_type.hpp  action_scope.hpp  action_state.hpp  action_status.hpp  agv_action.hpp  agv_geometry.hpp  agv_position.hpp  battery_state.hpp  blocking_type.hpp  bounding_box_reference.hpp  connection.hpp  connection_state.hpp  control_point.hpp  e_stop.hpp  edge_state.hpp  error.hpp  error_level.hpp  error_reference.hpp  header.hpp  info.hpp  info_level.hpp  info_reference.hpp  load.hpp  load_dimensions.hpp  node.hpp  node_position.hpp  node_state.hpp  operating_mode.hpp  optional_parameter.hpp  safety_state.hpp  state.hpp  trajectory.hpp  value_data_type.hpp  velocity.hpp
(+324 files in other folders)
